--- a/0Get Data.ipynb
+++ b/0Get Data.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b3ceb338",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/warproxxx/Library/Python/3.9/lib/python/site-packages/urllib3/__init__.py:34: NotOpenSSLWarning: urllib3 v2.0 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "import requests\n",
     "import pandas as pd\n",
@@ -44,13 +53,13 @@
     "        print(f\"Error reading last date with tail: {e}\")\n",
     "        return None\n",
     "\n",
-    "def download_kalshi_data(csv_file='kalshi_trade_data_2025.csv'):\n",
+    "def download_kalshi_data(csv_file='data/kalshi_trade_data.csv'):\n",
     "    \"\"\"Download Kalshi trade data with auto-resume using tail command\"\"\"\n",
     "    \n",
     "    # Determine start date\n",
     "    start_date = get_last_date_from_csv(csv_file)\n",
     "    if start_date is None:\n",
-    "        start_date = datetime(2025, 1, 1).date()\n",
+    "        start_date = datetime(2024, 8, 1).date()\n",
     "        print(\"Starting fresh download from 2025-01-01\")\n",
     "        file_mode = 'w'\n",
     "        write_header = True\n",
@@ -167,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "35e9bc04",
    "metadata": {},
    "outputs": [
@@ -176,16 +185,18 @@
      "output_type": "stream",
      "text": [
       "Starting fresh download from 2025-01-01\n",
-      "Downloading from 2025-01-01 to 2025-08-12\n"
+      "Downloading from 2024-08-01 to 2025-08-21\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading trade data:  30%|██▉       | 67/224 [02:52<12:43,  4.86s/it]/var/folders/09/fwj9ml5j17z0dlwbz1b4vwph0000gn/T/ipykernel_29579/818351770.py:87: FutureWarning: In a future version of pandas, parsing datetimes with mixed time zones will raise an error unless `utc=True`. Please specify `utc=True` to opt in to the new behaviour and silence this warning. To create a `Series` with mixed offsets and `object` dtype, please use `apply` and `datetime.datetime.strptime`\n",
+      "Downloading trade data:  24%|██▍       | 94/386 [01:51<13:34,  2.79s/it]/var/folders/09/fwj9ml5j17z0dlwbz1b4vwph0000gn/T/ipykernel_28364/1260493673.py:87: FutureWarning: In a future version of pandas, parsing datetimes with mixed time zones will raise an error unless `utc=True`. Please specify `utc=True` to opt in to the new behaviour and silence this warning. To create a `Series` with mixed offsets and `object` dtype, please use `apply` and `datetime.datetime.strptime`\n",
       "  df['create_ts'] = pd.to_datetime(df['create_ts'])\n",
-      "Downloading trade data: 100%|██████████| 224/224 [11:36<00:00,  3.11s/it]\n"
+      "Downloading trade data:  57%|█████▋    | 220/386 [06:40<09:17,  3.36s/it]/var/folders/09/fwj9ml5j17z0dlwbz1b4vwph0000gn/T/ipykernel_28364/1260493673.py:87: FutureWarning: In a future version of pandas, parsing datetimes with mixed time zones will raise an error unless `utc=True`. Please specify `utc=True` to opt in to the new behaviour and silence this warning. To create a `Series` with mixed offsets and `object` dtype, please use `apply` and `datetime.datetime.strptime`\n",
+      "  df['create_ts'] = pd.to_datetime(df['create_ts'])\n",
+      "Downloading trade data: 100%|██████████| 386/386 [17:35<00:00,  2.74s/it]"
      ]
     },
     {
@@ -194,7 +205,14 @@
      "text": [
       "\n",
       "Download complete!\n",
-      "Successfully processed: 217 days\n"
+      "Successfully processed: 375 days\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
