--- a/2Category Analysis.ipynb
+++ b/2Category Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "1474dcc4",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "3022807d",
    "metadata": {},
    "outputs": [],
@@ -24,65 +24,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "id": "822de602",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div><style>\n",
-       ".dataframe > thead > tr,\n",
-       ".dataframe > tbody > tr {\n",
-       "  text-align: right;\n",
-       "  white-space: pre-wrap;\n",
-       "}\n",
-       "</style>\n",
-       "<small>shape: (18_352_508, 5)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>create_ts</th><th>ticker_name</th><th>contracts_traded</th><th>price</th><th>category</th></tr><tr><td>str</td><td>str</td><td>i64</td><td>i64</td><td>str</td></tr></thead><tbody><tr><td>&quot;2025-01-01 23:59:27-05:00&quot;</td><td>&quot;KXINAUG-25-MZ&quot;</td><td>29</td><td>47</td><td>&quot;US Politics&quot;</td></tr><tr><td>&quot;2025-01-01 23:59:27-05:00&quot;</td><td>&quot;KXINAUG-25-MZ&quot;</td><td>25</td><td>47</td><td>&quot;US Politics&quot;</td></tr><tr><td>&quot;2025-01-01 23:59:27-05:00&quot;</td><td>&quot;KXINAUG-25-MZ&quot;</td><td>50</td><td>47</td><td>&quot;US Politics&quot;</td></tr><tr><td>&quot;2025-01-01 23:59:27-05:00&quot;</td><td>&quot;CABINETTULSI-25-FEB01&quot;</td><td>10</td><td>91</td><td>null</td></tr><tr><td>&quot;2025-01-01 23:59:25-05:00&quot;</td><td>&quot;KXSNOWNYM-25JAN-T8.0&quot;</td><td>222</td><td>21</td><td>&quot;Weather&quot;</td></tr><tr><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td></tr><tr><td>&quot;2025-08-12 00:00:02-04:00&quot;</td><td>&quot;KXWTAMATCH-25AUG11RYBMER-RYB&quot;</td><td>22</td><td>53</td><td>&quot;Sports&quot;</td></tr><tr><td>&quot;2025-08-12 00:00:02-04:00&quot;</td><td>&quot;KXFEDDECISION-25SEP-H0&quot;</td><td>1100</td><td>20</td><td>&quot;Macroeconomics&quot;</td></tr><tr><td>&quot;2025-08-12 00:00:01-04:00&quot;</td><td>&quot;KXCPI-25JUL-T0.2&quot;</td><td>163</td><td>52</td><td>&quot;Macroeconomics&quot;</td></tr><tr><td>&quot;2025-08-12 00:00:01-04:00&quot;</td><td>&quot;KXNEWTAYLOR-25&quot;</td><td>10</td><td>95</td><td>&quot;Pop Culture&quot;</td></tr><tr><td>&quot;2025-08-12 00:00:00-04:00&quot;</td><td>&quot;KXTOPARTIST-25-TS&quot;</td><td>3</td><td>27</td><td>&quot;Pop Culture&quot;</td></tr></tbody></table></div>"
-      ],
       "text/plain": [
-       "shape: (18_352_508, 5)\n",
-       "┌────────────────┬──────────────────────────────┬──────────────────┬───────┬────────────────┐\n",
-       "│ create_ts      ┆ ticker_name                  ┆ contracts_traded ┆ price ┆ category       │\n",
-       "│ ---            ┆ ---                          ┆ ---              ┆ ---   ┆ ---            │\n",
-       "│ str            ┆ str                          ┆ i64              ┆ i64   ┆ str            │\n",
-       "╞════════════════╪══════════════════════════════╪══════════════════╪═══════╪════════════════╡\n",
-       "│ 2025-01-01     ┆ KXINAUG-25-MZ                ┆ 29               ┆ 47    ┆ US Politics    │\n",
-       "│ 23:59:27-05:00 ┆                              ┆                  ┆       ┆                │\n",
-       "│ 2025-01-01     ┆ KXINAUG-25-MZ                ┆ 25               ┆ 47    ┆ US Politics    │\n",
-       "│ 23:59:27-05:00 ┆                              ┆                  ┆       ┆                │\n",
-       "│ 2025-01-01     ┆ KXINAUG-25-MZ                ┆ 50               ┆ 47    ┆ US Politics    │\n",
-       "│ 23:59:27-05:00 ┆                              ┆                  ┆       ┆                │\n",
-       "│ 2025-01-01     ┆ CABINETTULSI-25-FEB01        ┆ 10               ┆ 91    ┆ null           │\n",
-       "│ 23:59:27-05:00 ┆                              ┆                  ┆       ┆                │\n",
-       "│ 2025-01-01     ┆ KXSNOWNYM-25JAN-T8.0         ┆ 222              ┆ 21    ┆ Weather        │\n",
-       "│ 23:59:25-05:00 ┆                              ┆                  ┆       ┆                │\n",
-       "│ …              ┆ …                            ┆ …                ┆ …     ┆ …              │\n",
-       "│ 2025-08-12     ┆ KXWTAMATCH-25AUG11RYBMER-RYB ┆ 22               ┆ 53    ┆ Sports         │\n",
-       "│ 00:00:02-04:00 ┆                              ┆                  ┆       ┆                │\n",
-       "│ 2025-08-12     ┆ KXFEDDECISION-25SEP-H0       ┆ 1100             ┆ 20    ┆ Macroeconomics │\n",
-       "│ 00:00:02-04:00 ┆                              ┆                  ┆       ┆                │\n",
-       "│ 2025-08-12     ┆ KXCPI-25JUL-T0.2             ┆ 163              ┆ 52    ┆ Macroeconomics │\n",
-       "│ 00:00:01-04:00 ┆                              ┆                  ┆       ┆                │\n",
-       "│ 2025-08-12     ┆ KXNEWTAYLOR-25               ┆ 10               ┆ 95    ┆ Pop Culture    │\n",
-       "│ 00:00:01-04:00 ┆                              ┆                  ┆       ┆                │\n",
-       "│ 2025-08-12     ┆ KXTOPARTIST-25-TS            ┆ 3                ┆ 27    ┆ Pop Culture    │\n",
-       "│ 00:00:00-04:00 ┆                              ┆                  ┆       ┆                │\n",
-       "└────────────────┴──────────────────────────────┴──────────────────┴───────┴────────────────┘"
+       "['create_ts',\n",
+       " 'ticker_name',\n",
+       " 'contracts_traded',\n",
+       " 'price',\n",
+       " 'category',\n",
+       " 'parsed_ts']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df"
+    "df.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "dae04a58",
    "metadata": {},
    "outputs": [],
@@ -95,23 +63,12 @@
    "execution_count": null,
    "id": "ac49fd61",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3735468352"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "00becc01",
    "metadata": {},
    "outputs": [
@@ -121,7 +78,7 @@
        "0.692842181788079"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "6c8d3453",
    "metadata": {},
    "outputs": [],
@@ -144,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "61a11291",
    "metadata": {},
    "outputs": [
@@ -152,7 +109,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/09/fwj9ml5j17z0dlwbz1b4vwph0000gn/T/ipykernel_39158/3550471803.py:10: DeprecationWarning: `pl.count()` is deprecated. Please use `pl.len()` instead.\n",
+      "/var/folders/09/fwj9ml5j17z0dlwbz1b4vwph0000gn/T/ipykernel_95646/3550471803.py:10: DeprecationWarning: `pl.count()` is deprecated. Please use `pl.len()` instead.\n",
       "(Deprecated in version 0.20.5)\n",
       "  pl.count().alias(\"trade_count\")\n"
      ]
@@ -175,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "63976dbd",
    "metadata": {},
    "outputs": [
@@ -189,30 +146,30 @@
        "  white-space: pre-wrap;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (80, 4)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>month</th><th>category</th><th>category_volume</th><th>trade_count</th></tr><tr><td>datetime[μs, UTC]</td><td>str</td><td>i64</td><td>u32</td></tr></thead><tbody><tr><td>2025-08-01 00:00:00 UTC</td><td>&quot;Finance&quot;</td><td>7284207</td><td>44617</td></tr><tr><td>2025-04-01 00:00:00 UTC</td><td>&quot;Weather&quot;</td><td>617806</td><td>9466</td></tr><tr><td>2025-06-01 00:00:00 UTC</td><td>null</td><td>4496842</td><td>59217</td></tr><tr><td>2025-06-01 00:00:00 UTC</td><td>&quot;Sports&quot;</td><td>631305022</td><td>1961290</td></tr><tr><td>2025-02-01 00:00:00 UTC</td><td>&quot;Pop Culture&quot;</td><td>21773942</td><td>249450</td></tr><tr><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td></tr><tr><td>2025-07-01 00:00:00 UTC</td><td>&quot;Temperature&quot;</td><td>12026002</td><td>234827</td></tr><tr><td>2025-03-01 00:00:00 UTC</td><td>&quot;Macroeconomics&quot;</td><td>7336357</td><td>53383</td></tr><tr><td>2025-08-01 00:00:00 UTC</td><td>&quot;Pop Culture&quot;</td><td>4779741</td><td>41745</td></tr><tr><td>2025-04-01 00:00:00 UTC</td><td>&quot;Macroeconomics&quot;</td><td>52362968</td><td>183280</td></tr><tr><td>2025-03-01 00:00:00 UTC</td><td>&quot;US Politics&quot;</td><td>24059972</td><td>217679</td></tr></tbody></table></div>"
+       "<small>shape: (80, 4)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>month</th><th>category</th><th>category_volume</th><th>trade_count</th></tr><tr><td>datetime[μs, UTC]</td><td>str</td><td>i64</td><td>u32</td></tr></thead><tbody><tr><td>2025-01-01 00:00:00 UTC</td><td>&quot;Weather&quot;</td><td>1603464</td><td>16523</td></tr><tr><td>2025-01-01 00:00:00 UTC</td><td>&quot;Finance&quot;</td><td>5048518</td><td>24608</td></tr><tr><td>2025-03-01 00:00:00 UTC</td><td>&quot;Global Politics&quot;</td><td>3698571</td><td>37107</td></tr><tr><td>2025-07-01 00:00:00 UTC</td><td>&quot;Finance&quot;</td><td>15619526</td><td>115624</td></tr><tr><td>2025-06-01 00:00:00 UTC</td><td>&quot;Finance&quot;</td><td>16078432</td><td>115400</td></tr><tr><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td></tr><tr><td>2025-01-01 00:00:00 UTC</td><td>&quot;Sports&quot;</td><td>5142734</td><td>45071</td></tr><tr><td>2025-07-01 00:00:00 UTC</td><td>&quot;Macroeconomics&quot;</td><td>64455897</td><td>155534</td></tr><tr><td>2025-05-01 00:00:00 UTC</td><td>&quot;Temperature&quot;</td><td>10602831</td><td>222076</td></tr><tr><td>2025-01-01 00:00:00 UTC</td><td>&quot;Macroeconomics&quot;</td><td>3781036</td><td>16395</td></tr><tr><td>2025-05-01 00:00:00 UTC</td><td>&quot;Weather&quot;</td><td>1110853</td><td>12027</td></tr></tbody></table></div>"
       ],
       "text/plain": [
        "shape: (80, 4)\n",
-       "┌─────────────────────────┬────────────────┬─────────────────┬─────────────┐\n",
-       "│ month                   ┆ category       ┆ category_volume ┆ trade_count │\n",
-       "│ ---                     ┆ ---            ┆ ---             ┆ ---         │\n",
-       "│ datetime[μs, UTC]       ┆ str            ┆ i64             ┆ u32         │\n",
-       "╞═════════════════════════╪════════════════╪═════════════════╪═════════════╡\n",
-       "│ 2025-08-01 00:00:00 UTC ┆ Finance        ┆ 7284207         ┆ 44617       │\n",
-       "│ 2025-04-01 00:00:00 UTC ┆ Weather        ┆ 617806          ┆ 9466        │\n",
-       "│ 2025-06-01 00:00:00 UTC ┆ null           ┆ 4496842         ┆ 59217       │\n",
-       "│ 2025-06-01 00:00:00 UTC ┆ Sports         ┆ 631305022       ┆ 1961290     │\n",
-       "│ 2025-02-01 00:00:00 UTC ┆ Pop Culture    ┆ 21773942        ┆ 249450      │\n",
-       "│ …                       ┆ …              ┆ …               ┆ …           │\n",
-       "│ 2025-07-01 00:00:00 UTC ┆ Temperature    ┆ 12026002        ┆ 234827      │\n",
-       "│ 2025-03-01 00:00:00 UTC ┆ Macroeconomics ┆ 7336357         ┆ 53383       │\n",
-       "│ 2025-08-01 00:00:00 UTC ┆ Pop Culture    ┆ 4779741         ┆ 41745       │\n",
-       "│ 2025-04-01 00:00:00 UTC ┆ Macroeconomics ┆ 52362968        ┆ 183280      │\n",
-       "│ 2025-03-01 00:00:00 UTC ┆ US Politics    ┆ 24059972        ┆ 217679      │\n",
-       "└─────────────────────────┴────────────────┴─────────────────┴─────────────┘"
+       "┌─────────────────────────┬─────────────────┬─────────────────┬─────────────┐\n",
+       "│ month                   ┆ category        ┆ category_volume ┆ trade_count │\n",
+       "│ ---                     ┆ ---             ┆ ---             ┆ ---         │\n",
+       "│ datetime[μs, UTC]       ┆ str             ┆ i64             ┆ u32         │\n",
+       "╞═════════════════════════╪═════════════════╪═════════════════╪═════════════╡\n",
+       "│ 2025-01-01 00:00:00 UTC ┆ Weather         ┆ 1603464         ┆ 16523       │\n",
+       "│ 2025-01-01 00:00:00 UTC ┆ Finance         ┆ 5048518         ┆ 24608       │\n",
+       "│ 2025-03-01 00:00:00 UTC ┆ Global Politics ┆ 3698571         ┆ 37107       │\n",
+       "│ 2025-07-01 00:00:00 UTC ┆ Finance         ┆ 15619526        ┆ 115624      │\n",
+       "│ 2025-06-01 00:00:00 UTC ┆ Finance         ┆ 16078432        ┆ 115400      │\n",
+       "│ …                       ┆ …               ┆ …               ┆ …           │\n",
+       "│ 2025-01-01 00:00:00 UTC ┆ Sports          ┆ 5142734         ┆ 45071       │\n",
+       "│ 2025-07-01 00:00:00 UTC ┆ Macroeconomics  ┆ 64455897        ┆ 155534      │\n",
+       "│ 2025-05-01 00:00:00 UTC ┆ Temperature     ┆ 10602831        ┆ 222076      │\n",
+       "│ 2025-01-01 00:00:00 UTC ┆ Macroeconomics  ┆ 3781036         ┆ 16395       │\n",
+       "│ 2025-05-01 00:00:00 UTC ┆ Weather         ┆ 1110853         ┆ 12027       │\n",
+       "└─────────────────────────┴─────────────────┴─────────────────┴─────────────┘"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "1395ee18",
    "metadata": {},
    "outputs": [],
@@ -239,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "b578723b",
    "metadata": {},
    "outputs": [
@@ -253,7 +210,7 @@
        "  white-space: pre-wrap;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (8, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>month</th><th>month_total_volume</th></tr><tr><td>datetime[μs, UTC]</td><td>i64</td></tr></thead><tbody><tr><td>2025-03-01 00:00:00 UTC</td><td>513106674</td></tr><tr><td>2025-01-01 00:00:00 UTC</td><td>163794962</td></tr><tr><td>2025-08-01 00:00:00 UTC</td><td>252817590</td></tr><tr><td>2025-06-01 00:00:00 UTC</td><td>792124144</td></tr><tr><td>2025-04-01 00:00:00 UTC</td><td>453241714</td></tr><tr><td>2025-02-01 00:00:00 UTC</td><td>165962441</td></tr><tr><td>2025-07-01 00:00:00 UTC</td><td>740539131</td></tr><tr><td>2025-05-01 00:00:00 UTC</td><td>653881696</td></tr></tbody></table></div>"
+       "<small>shape: (8, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>month</th><th>month_total_volume</th></tr><tr><td>datetime[μs, UTC]</td><td>i64</td></tr></thead><tbody><tr><td>2025-03-01 00:00:00 UTC</td><td>513106674</td></tr><tr><td>2025-04-01 00:00:00 UTC</td><td>453241714</td></tr><tr><td>2025-06-01 00:00:00 UTC</td><td>792124144</td></tr><tr><td>2025-05-01 00:00:00 UTC</td><td>653881696</td></tr><tr><td>2025-02-01 00:00:00 UTC</td><td>165962441</td></tr><tr><td>2025-07-01 00:00:00 UTC</td><td>740539131</td></tr><tr><td>2025-08-01 00:00:00 UTC</td><td>252817590</td></tr><tr><td>2025-01-01 00:00:00 UTC</td><td>163794962</td></tr></tbody></table></div>"
       ],
       "text/plain": [
        "shape: (8, 2)\n",
@@ -263,17 +220,17 @@
        "│ datetime[μs, UTC]       ┆ i64                │\n",
        "╞═════════════════════════╪════════════════════╡\n",
        "│ 2025-03-01 00:00:00 UTC ┆ 513106674          │\n",
-       "│ 2025-01-01 00:00:00 UTC ┆ 163794962          │\n",
-       "│ 2025-08-01 00:00:00 UTC ┆ 252817590          │\n",
-       "│ 2025-06-01 00:00:00 UTC ┆ 792124144          │\n",
        "│ 2025-04-01 00:00:00 UTC ┆ 453241714          │\n",
+       "│ 2025-06-01 00:00:00 UTC ┆ 792124144          │\n",
+       "│ 2025-05-01 00:00:00 UTC ┆ 653881696          │\n",
        "│ 2025-02-01 00:00:00 UTC ┆ 165962441          │\n",
        "│ 2025-07-01 00:00:00 UTC ┆ 740539131          │\n",
-       "│ 2025-05-01 00:00:00 UTC ┆ 653881696          │\n",
+       "│ 2025-08-01 00:00:00 UTC ┆ 252817590          │\n",
+       "│ 2025-01-01 00:00:00 UTC ┆ 163794962          │\n",
        "└─────────────────────────┴────────────────────┘"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "fb0a48b5",
    "metadata": {},
    "outputs": [],
@@ -311,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "c2b9b191",
    "metadata": {},
    "outputs": [
@@ -359,7 +316,7 @@
        "└────────────────┴────────────────┴────────────────┴────────────────┴─────────────┴────────────────┘"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "87ef79cd",
    "metadata": {},
    "outputs": [
@@ -378,7 +335,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/09/fwj9ml5j17z0dlwbz1b4vwph0000gn/T/ipykernel_39158/2894943215.py:2: DeprecationWarning: the argument `columns` for `DataFrame.pivot` is deprecated. It was renamed to `on` in version 1.0.0.\n",
+      "/var/folders/09/fwj9ml5j17z0dlwbz1b4vwph0000gn/T/ipykernel_95646/2894943215.py:2: DeprecationWarning: the argument `columns` for `DataFrame.pivot` is deprecated. It was renamed to `on` in version 1.0.0.\n",
       "  monthly_volume_pct\n"
      ]
     }
@@ -398,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "id": "83c41ca6",
    "metadata": {},
    "outputs": [],
@@ -410,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 16,
    "id": "06ceabe1",
    "metadata": {},
    "outputs": [],
@@ -420,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 17,
    "id": "f9fc4bf0",
    "metadata": {},
    "outputs": [
